[package]
name = "nixpacks-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nixpacks_python"
crate-type = ["cdylib"]

[dependencies]
nixpacks = "1.21.2"
pyo3 = "0.20.0"
serde_json = "1.0.115"
tokio = "1.37.0"
